fixes the spacing in the form layout

--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@ h1,p{
 
 label {
     display:block;
-    margin:12px 0 0 0;
+    margin:12px 0 12px 0;
 }
 
 form {
@@ -36,4 +36,12 @@ fieldset {
 
 input:not([type="radio"]):not([type="checkbox"]) ,select {
     display:block;
+     width:70%;
+     min-height: 2em;
+    
+}
+input,select {
+    margin:10px 0 0 0;
+   
+
 }
